Fixed spacing & labeled code, also planned ahead

--- a/stylesheets/design-matters.css
+++ b/stylesheets/design-matters.css
@@ -49,7 +49,7 @@ table {
 }
 /* END Reset -~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~ */
 
-/* BEGIN General Style & Header/Footer Code */
+/* BEGIN General Style */
 body {
   background-color: #0E313F;
 }
@@ -60,6 +60,9 @@ main {
   background-color: #F2E9DE;
   margin-bottom: 22px;
 }
+/* END General Style */
+
+/* BEGIN Header Code*/
 header{
     width: 800px;
     height: 350px;
@@ -70,12 +73,65 @@ header{
 }
 h1{
   width: 750px;
-  height: 350px;
+  height: 340px;
   padding-left: 50px;
-  font-size: 10em;
+  padding-top: 10px;
+  font-size: 8.5em;
+  line-height: 1.1em;
   color: white;
+  font-family: 'Source Serif Pro', serif;
   background-color: rgba(175,25,120,.7);
 }
+/* END Header Code*/
+
+/* BEGIN Two-Column Code */
+article{
+  margin-left: 50px;
+  width: 480px;
+  margin-right: 50px;
+  line-height: 1.25em;
+}
+h2{
+
+}
+hr{
+
+}
+p{
+
+}
+nav{
+  margin-right: 25px;
+  width: 190px;
+  height: 370px;
+  background-color: #0E313F;
+}
+h3{
+
+}
+a:link{
+
+}
+a:visited{
+
+}
+a:focus{
+
+}
+a:hover{
+
+}
+a:active{
+  
+}
+.column {
+  vertical-align: top;
+  position: relative;
+  display: inline-block;
+}
+/* END Two-Column Code */
+
+/* BEGIN Footer Code*/
 footer{
   width: 750px;
   height: 10px;
@@ -85,23 +141,7 @@ footer{
   text-align: center;
   color: #0E313F;
 }
+h4{
 
-/* BEGIN Two-Column Layout Code */
-article{
-  padding-right: 25px;
-  width: 500px;
-  padding-left: 50px;
-  line-height: 1.25em;
 }
-nav{
-  padding-right: 50px;
-  width: 90px;
-  padding-left: 25px;
-  background-color: #0E313F;
-}
-.column {
-  vertical-align: top;
-  position: relative;
-  display: inline-block;
-}
-/* END Two-Column Layout Code */
+/* END Footer Code*/
